# cmake-tools

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md  build  build-config  build.sh  ecmake  ecpack  ectest
cmake/: cmake_script.cmake  configure.cmake
helloworld/: CMakeLists.txt
helloworld/src/: helloworld.cpp
helloworld/tests/it/: CMakeLists.txt
helloworld/tests/perfo/: .gitignore  CMakeLists.txt
helloworld/tests/tu/: CMakeLists.txt
helloworld/tests/tu/src/: main.cpp
helloworld/tests/ut/: CMakeLists.txt
libhello/: CMakeLists.txt
libhello/src/: hello.h
libhello/tests/tu/: CMakeLists.txt
libhello/tests/tu/src/: TuHello.hpp
libhello/tests/ut/: CMakeLists.txt
libhello/tests/ut/src/: main.cpp
sample/: CMakeLists.txt
sample/helloworld/: .gitignore  CMakeLists.txt
sample/helloworld/tests/perfo/: CMakeLists.txt
sample/helloworld/tests/perfo/src/: main.cpp
sample/helloworld/tests/ut/: CMakeLists.txt
sample/libhello/: CMakeLists.txt
sample/libhello/src/: hello.cpp
sample/libhello/tests/ut/: CMakeLists.txt
sample/libhello/tests/ut/src/: TuHello.hpp
scripts/: add-package.sh  cdash.conf  check-ssh  check-ssh.sh  create-ppa.sh  create-repo.sh  debian-install-cdash  docker-remove-container  docker-remove-dangling  docker-remove-untagged  get-distribution  get-distribution.sh  get-next-release.sh  package-add  package-control  package-exist  package-next-release  package-release  package-split  ppa-create  root-check  ssh-copy-ids
scripts/ecpack/: ecpack-debian  ecpack-docker
